en este commit cambié las variables de los colores de fondo y terminé la pagina de nosotros

--- a/css/estiloscss.css
+++ b/css/estiloscss.css
@@ -9,6 +9,11 @@
   box-sizing: border-box;
 }
 
+/*Variables*/
+/*
+$bgcolor1:#fac0d4 ;
+$bgcolor2:#b7dcfa ;
+*/
 body {
   font-family: "Ubuntu", sans-serif;
   overflow-x: hidden;
@@ -59,7 +64,7 @@ div h2 {
 
 /*Color de fondo del h2*/
 .colorh2 {
-  background-color: #fab9d0;
+  background-color: #fc9dbe;
 }
 
 a {
@@ -165,7 +170,7 @@ footer div a {
 .gridhijo1 {
   display: flex;
   flex-wrap: wrap;
-  background: linear-gradient(to top, #ffffff, #f8a5c2);
+  background: linear-gradient(to top, #ffffff, #fc9dbe);
   justify-content: center;
 }
 .gridhijo1 h1 {
@@ -204,11 +209,10 @@ footer div a {
 
 /*Aqui se cambia el color de fondo de los contenedores principales de ropa*/
 .contenedorropa1 {
-  background: linear-gradient(to left, #ffffff, #a4d1f5);
+  background: linear-gradient(to left, #ffffff, #b7dcfa);
 }
-
 .contenedorropa1:hover {
-  background: linear-gradient(to left, #ffffff, #f8a5c2);
+  background: linear-gradient(to left, #ffffff, #fc9dbe);
   box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.5);
 }
 
@@ -222,7 +226,7 @@ footer div a {
   width: 10vw;
   height: 5vw;
   margin-left: 1vw;
-  background-color: #f590ec;
+  background-color: #fc9dbe;
   border-color: #ffffff;
   border-radius: 10px;
 }
@@ -232,7 +236,7 @@ footer div a {
   font-size: 2.5vw;
 }
 .contenedortops button:hover {
-  background-color: #8ac5f5;
+  background-color: #b7dcfa;
   box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.5);
 }
 .contenedortops img {
@@ -245,12 +249,12 @@ footer div a {
 
 /*Le coloco color de fonto al titulo de tops en la seccion tops*/
 .colorfondotitulotop {
-  background-color: #f8a5c2;
+  background-color: #fc9dbe;
 }
 
 /*Le coloco color de fonto al titulo de joggers en la seccion joggers*/
 .colorfondotitulojogger {
-  background-color: #8ED0D3;
+  background-color: #b7dcfa;
 }
 
 /*Le daré aqui estilo a las imagenes de los tops de ropa*/
@@ -265,7 +269,7 @@ footer div a {
 
 /*Contenedor con un color de fondo asignado a los pantalones de ropa*/
 .contenedorpantalonbackgroundcolor {
-  background-color: #f8a5c2;
+  background-color: #fc9dbe;
   /* rosa claro */
   background-image: radial-gradient(circle at 20% 50%, rgba(184, 224, 233, 0.1), rgba(184, 224, 233, 0.5) 60%, #b8e0e9 70%, #b8e0e9);
   /* gradiente radial */
@@ -274,12 +278,12 @@ footer div a {
 
 /*Clase contenedor que da el borde inferior azul*/
 .contenedormainbordeinferior1 {
-  border-bottom: 50px solid rgb(27, 137, 240);
+  border-bottom: 50px solid #b7dcfa;
 }
 
 .contenedormainbordeinferior2 {
   padding-bottom: 5rem;
-  border-bottom: 50px solid #E87E64;
+  border-bottom: 50px solid #fc9dbe;
 }
 
 /*Voy a crear la tarjeta para articulos*/
@@ -288,7 +292,7 @@ footer div a {
   width: 10vw;
   height: 5vw;
   margin-left: 1vw;
-  background-color: #f590ec;
+  background-color: #fc9dbe;
   border-color: #ffffff;
   border-radius: 10px;
 }
@@ -298,7 +302,7 @@ footer div a {
   font-size: 2.5vw;
 }
 .boton:hover {
-  background-color: #8ac5f5;
+  background-color: #b7dcfa;
   box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.5);
 }
 
@@ -306,7 +310,7 @@ footer div a {
   width: 10vw;
   height: 5vw;
   margin-left: 1vw;
-  background-color: #8ac5f5;
+  background-color: #b7dcfa;
   border-color: #ffffff;
   border-radius: 10px;
 }
@@ -316,7 +320,7 @@ footer div a {
   font-size: 2.5vw;
 }
 .boton2:hover {
-  background-color: #f590ec;
+  background-color: #fc9dbe;
   box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.5);
 }
 
@@ -328,11 +332,35 @@ footer div a {
   display: flex;
 }
 
+/*Aqui empieza los estilos de nosotros*/
+.bloqueimghorizontal {
+  display: inline-block;
+  position: relative;
+  width: 100%;
+}
+.bloqueimghorizontal h2 {
+  position: absolute;
+  bottom: 50%;
+  left: 53%;
+  z-index: 1;
+  color: rgb(53, 133, 236);
+  padding: 10px;
+  border: 2px solid rgb(53, 133, 236); /* Agrega un borde blanco alrededor del elemento h2 */
+}
+.bloqueimghorizontal .imagenhorizontal {
+  position: relative;
+  z-index: -1;
+  object-fit: contain;
+}
+
 /*media queries*/
 /*Aquí cuando se alcanza el tamaño de 900 el tamaño del main es minimo 650px*/
 @media (min-width: 992px) {
   main {
     min-height: 650px;
+  }
+  main div .imgexpandir {
+    object-fit: cover;
   }
   header p {
     font-size: 2vw;
