--- a/css/estiloscss.css
+++ b/css/estiloscss.css
@@ -79,7 +79,8 @@ main {
   padding: 0, 5rem;
 }
 main img {
-  border: none; /* Quitamos cualquier borde predeterminado de la imagen */
+  border: none;
+  /* Quitamos cualquier borde predeterminado de la imagen */
 }
 main div img {
   width: 100%;
@@ -333,24 +334,74 @@ footer div a {
 }
 
 /*Aqui empieza los estilos de nosotros*/
+/*Estilos tambien del slider de clases*/
 .bloqueimghorizontal {
   display: inline-block;
   position: relative;
   width: 100%;
 }
-.bloqueimghorizontal h2 {
+.bloqueimghorizontal .h2horizontal {
   position: absolute;
   bottom: 50%;
   left: 53%;
   z-index: 1;
-  color: rgb(53, 133, 236);
+  color: rgba(0, 0, 0, 0.699);
+  background-color: #fc9dbe;
   padding: 10px;
-  border: 2px solid rgb(53, 133, 236); /* Agrega un borde blanco alrededor del elemento h2 */
+  border: 2px solid #fc9dbe;
+  /* Agrega un borde blanco alrededor del elemento h2 */
+}
+.bloqueimghorizontal .h2horizontal2 {
+  position: absolute;
+  bottom: 15%;
+  top: 5%;
+  left: 50%;
+  z-index: 1;
+  color: rgba(0, 0, 0, 0.699);
+  padding: 10px;
+  /* Agrega un borde blanco alrededor del elemento h2 */
 }
 .bloqueimghorizontal .imagenhorizontal {
   position: relative;
   z-index: -1;
   object-fit: contain;
+}
+
+/*Estilos de clases*/
+/*Aqui defino el estilo para sobresalir letras en el slider*/
+.sobresalir {
+  text-shadow: 3px 3px 6px rgba(0, 0, 0, 0.8);
+}
+
+.carousel-inner img {
+  height: 450px;
+  object-fit: cover;
+}
+
+/*Estilos para los bloques que componen la pagina clases*/
+.bloqueimghorizontal2 {
+  width: 100%;
+  height: 20vw;
+  background-image: url("../multimedia/imagenes/clases/profesor.jpg");
+  background-size: cover;
+}
+
+.bloqueimghorizontal3 {
+  width: 100%;
+  height: 20vw;
+  background-image: url("../multimedia/imagenes/clases/fondocolor2.jpg");
+  background-size: cover;
+}
+
+.bloqueimghorizontal4 {
+  width: 100%;
+  height: auto;
+  background-image: url("../multimedia/imagenes/clases/fondocolor3.jpg");
+  background-size: cover;
+}
+.bloqueimghorizontal4 .bloquehorizontalimg {
+  height: 100%;
+  width: auto;
 }
 
 /*media queries*/
@@ -495,6 +546,21 @@ footer div a {
     color: rgb(0, 0, 0);
     margin: 0;
     font-size: 4vw;
+  }
+  /*carrusel img*/
+  .bloqueimghorizontal {
+    display: inline-block;
+    position: relative;
+    width: 100%;
+    height: auto;
+  }
+  .bloqueimghorizontal .imagenhorizontal {
+    width: 100%;
+    height: auto;
+  }
+  .carousel-inner img {
+    height: 150px;
+    object-fit: cover;
   }
   footer div {
     flex-wrap: wrap;
