En este commit terminé de añadir lo de clases, falta arreglar el responsive

--- a/css/estiloscss.css
+++ b/css/estiloscss.css
@@ -381,27 +381,166 @@ footer div a {
 /*Estilos para los bloques que componen la pagina clases*/
 .bloqueimghorizontal2 {
   width: 100%;
-  height: 20vw;
+  height: auto;
   background-image: url("../multimedia/imagenes/clases/profesor.jpg");
   background-size: cover;
+}
+.bloqueimghorizontal2 a {
+  color: rgba(0, 0, 0, 0.699);
 }
 
 .bloqueimghorizontal3 {
   width: 100%;
-  height: 20vw;
+  height: auto;
   background-image: url("../multimedia/imagenes/clases/fondocolor2.jpg");
   background-size: cover;
 }
 
 .bloqueimghorizontal4 {
+  display: inline-block;
+  position: relative;
   width: 100%;
-  height: auto;
+  height: 500px;
   background-image: url("../multimedia/imagenes/clases/fondocolor3.jpg");
   background-size: cover;
 }
-.bloqueimghorizontal4 .bloquehorizontalimg {
-  height: 100%;
-  width: auto;
+.bloqueimghorizontal4 .h2horizontal {
+  position: absolute;
+  bottom: 66%;
+  left: 67%;
+  z-index: 1;
+  color: rgba(0, 0, 0, 0.699);
+  background-color: #fc9dbe;
+  padding: 10px;
+  border: 2px solid #fc9dbe;
+  /* Agrega un borde blanco alrededor del elemento h2 */
+}
+.bloqueimghorizontal4 .p2horizontal {
+  position: absolute;
+  bottom: 20%;
+  left: 60%;
+  z-index: 1;
+  color: rgba(0, 0, 0, 0.699);
+  padding: 10px;
+  width: 400px;
+}
+.bloqueimghorizontal4 .imghorizontal {
+  position: absolute;
+  bottom: 10%;
+  left: 26%;
+  z-index: 1;
+  color: rgba(0, 0, 0, 0.699);
+  padding: 10px;
+  width: 30%;
+  border-radius: 50%;
+}
+.bloqueimghorizontal4 .imghorizontal2 {
+  position: absolute;
+  bottom: 31%;
+  left: 6%;
+  z-index: 1;
+  color: rgba(0, 0, 0, 0.699);
+  padding: 10px;
+  width: 30%;
+  border-radius: 50%;
+}
+
+.bloqueimghorizontal5 {
+  display: inline-block;
+  position: relative;
+  width: 100%;
+  height: 500px;
+  background-image: url("../multimedia/imagenes/clases/fondocolor4.jpg");
+  background-size: cover;
+}
+.bloqueimghorizontal5 .h2horizontal {
+  position: absolute;
+  bottom: 66%;
+  left: 67%;
+  z-index: 1;
+  color: rgba(0, 0, 0, 0.699);
+  background-color: #fc9dbe;
+  padding: 10px;
+  border: 2px solid #fc9dbe;
+  /* Agrega un borde blanco alrededor del elemento h2 */
+}
+.bloqueimghorizontal5 .p2horizontal {
+  position: absolute;
+  bottom: 20%;
+  left: 60%;
+  z-index: 1;
+  color: rgba(0, 0, 0, 0.699);
+  padding: 10px;
+  width: 400px;
+}
+.bloqueimghorizontal5 .imghorizontal {
+  position: absolute;
+  bottom: 10%;
+  left: 26%;
+  z-index: 1;
+  color: rgba(0, 0, 0, 0.699);
+  padding: 10px;
+  width: 30%;
+  border-radius: 50%;
+}
+.bloqueimghorizontal5 .imghorizontal2 {
+  position: absolute;
+  bottom: 31%;
+  left: 6%;
+  z-index: 1;
+  color: rgba(0, 0, 0, 0.699);
+  padding: 10px;
+  width: 30%;
+  border-radius: 50%;
+}
+
+.bloqueimghorizontal6 {
+  display: inline-block;
+  position: relative;
+  width: 100%;
+  height: 500px;
+  background-image: url("../multimedia/imagenes/clases/fondocolor5.jpg");
+  background-size: cover;
+}
+.bloqueimghorizontal6 .h2horizontal {
+  position: absolute;
+  bottom: 66%;
+  left: 67%;
+  z-index: 1;
+  color: rgba(0, 0, 0, 0.699);
+  background-color: #fc9dbe;
+  padding: 10px;
+  border: 2px solid #fc9dbe;
+  /* Agrega un borde blanco alrededor del elemento h2 */
+}
+.bloqueimghorizontal6 .p2horizontal {
+  position: absolute;
+  bottom: 20%;
+  left: 60%;
+  z-index: 1;
+  color: rgba(0, 0, 0, 0.699);
+  padding: 10px;
+  width: 400px;
+}
+.bloqueimghorizontal6 .imghorizontal {
+  position: absolute;
+  bottom: 2%;
+  left: 26%;
+  z-index: 1;
+  color: rgba(0, 0, 0, 0.699);
+  padding: 10px;
+  width: 30%;
+  border-radius: 50%;
+}
+.bloqueimghorizontal6 .imghorizontal2 {
+  position: absolute;
+  bottom: 20%;
+  left: 6%;
+  z-index: 1;
+  color: rgba(0, 0, 0, 0.699);
+  padding: 10px;
+  width: 30%;
+  border-radius: 50%;
 }
 
 /*media queries*/
