--- a/scss/estiloscss.scss
+++ b/scss/estiloscss.scss
@@ -376,8 +376,6 @@ footer div a {
     display: inline-block;
     position: relative;
     width: 100%;
-    
-
     .h2horizontal {
         position: absolute;
         bottom: 50%;
@@ -388,9 +386,7 @@ footer div a {
         padding: 10px;
         border: 2px solid $bgcolor1;
         /* Agrega un borde blanco alrededor del elemento h2 */
-
     }
-
     .h2horizontal2 {
         position: absolute;
         bottom: 15%;
@@ -400,9 +396,7 @@ footer div a {
         color: rgba(0, 0, 0, 0.699);
         padding: 10px;
         /* Agrega un borde blanco alrededor del elemento h2 */
-        
     }
-
     .imagenhorizontal {
         position: relative;
         z-index: -1;
@@ -418,8 +412,6 @@ footer div a {
     text-shadow: 3px 3px 6px rgba(0, 0, 0, 0.8);
 
 }
-
-
 .carousel-inner {
     img {
         height: 450px;
@@ -431,26 +423,168 @@ footer div a {
 /*Estilos para los bloques que componen la pagina clases*/
 .bloqueimghorizontal2 {
     width: 100%;
-    height: 20vw;
+    height: auto;
     background-image: url('../multimedia/imagenes/clases/profesor.jpg');
     background-size: cover;
+    a{
+        color: rgba(0, 0, 0, 0.699);
+    }
 }
-.bloqueimghorizontal3{
+
+.bloqueimghorizontal3 {
     width: 100%;
-    height: 20vw;
+    height: auto;
     background-image: url('../multimedia/imagenes/clases/fondocolor2.jpg');
     background-size: cover;
 }
-.bloqueimghorizontal4{
+
+.bloqueimghorizontal4 {
+    display: inline-block;
+    position: relative;
     width: 100%;
-    height: auto;
+    height: 500px;
     background-image: url('../multimedia/imagenes/clases/fondocolor3.jpg');
     background-size: cover;
-    .bloquehorizontalimg{
-        height: 100%;
-        width: auto;
+    .h2horizontal {
+        position: absolute;
+        bottom: 66%;
+        left: 67%;
+        z-index: 1;
+        color: rgba(0, 0, 0, 0.699);
+        background-color: $bgcolor1;
+        padding: 10px;
+        border: 2px solid $bgcolor1;
+        /* Agrega un borde blanco alrededor del elemento h2 */
+    }
+    .p2horizontal {
+        position: absolute;
+        bottom: 20%;
+        left: 60%;
+        z-index: 1;
+        color: rgba(0, 0, 0, 0.699);
+        padding: 10px;
+        width: 400px;
+    }
+    .imghorizontal {
+        position: absolute;
+        bottom: 10%;
+        left: 26%;
+        z-index: 1;
+        color: rgba(0, 0, 0, 0.699);
+        padding: 10px;
+        width: 30%;
+        border-radius: 50%;
+    }
+    .imghorizontal2 {
+        position: absolute;
+        bottom: 31%;
+        left: 6%;
+        z-index: 1;
+        color: rgba(0, 0, 0, 0.699);
+        padding: 10px;
+        width: 30%;
+        border-radius: 50%;
+    }
+    
+}
+.bloqueimghorizontal5 {
+    display: inline-block;
+    position: relative;
+    width: 100%;
+    height: 500px;
+    background-image: url('../multimedia/imagenes/clases/fondocolor4.jpg');
+    background-size: cover;
+    .h2horizontal {
+        position: absolute;
+        bottom: 66%;
+        left: 67%;
+        z-index: 1;
+        color: rgba(0, 0, 0, 0.699);
+        background-color: $bgcolor1;
+        padding: 10px;
+        border: 2px solid $bgcolor1;
+        /* Agrega un borde blanco alrededor del elemento h2 */
+    }
+    .p2horizontal {
+        position: absolute;
+        bottom: 20%;
+        left: 60%;
+        z-index: 1;
+        color: rgba(0, 0, 0, 0.699);
+        padding: 10px;
+        width: 400px;
+    }
+    .imghorizontal {
+        position: absolute;
+        bottom: 10%;
+        left: 26%;
+        z-index: 1;
+        color: rgba(0, 0, 0, 0.699);
+        padding: 10px;
+        width: 30%;
+        border-radius: 50%;
+    }
+    .imghorizontal2 {
+        position: absolute;
+        bottom: 31%;
+        left: 6%;
+        z-index: 1;
+        color: rgba(0, 0, 0, 0.699);
+        padding: 10px;
+        width: 30%;
+        border-radius: 50%;
+    }
+    
+}
+.bloqueimghorizontal6 {
+    display: inline-block;
+    position: relative;
+    width: 100%;
+    height: 500px;
+    background-image: url('../multimedia/imagenes/clases/fondocolor5.jpg');
+    background-size: cover;
+    .h2horizontal {
+        position: absolute;
+        bottom: 66%;
+        left: 67%;
+        z-index: 1;
+        color: rgba(0, 0, 0, 0.699);
+        background-color: $bgcolor1;
+        padding: 10px;
+        border: 2px solid $bgcolor1;
+        /* Agrega un borde blanco alrededor del elemento h2 */
+    }
+    .p2horizontal {
+        position: absolute;
+        bottom: 20%;
+        left: 60%;
+        z-index: 1;
+        color: rgba(0, 0, 0, 0.699);
+        padding: 10px;
+        width: 400px;
+    }
+    .imghorizontal {
+        position: absolute;
+        bottom: 2%;
+        left: 26%;
+        z-index: 1;
+        color: rgba(0, 0, 0, 0.699);
+        padding: 10px;
+        width: 30%;
+        border-radius: 50%;
+    }
+    .imghorizontal2 {
+        position: absolute;
+        bottom: 20%;
+        left: 6%;
+        z-index: 1;
+        color: rgba(0, 0, 0, 0.699);
+        padding: 10px;
+        width: 30%;
+        border-radius: 50%;
     }
 }
+
 
 
 /*media queries*/
@@ -635,11 +769,13 @@ footer div a {
         position: relative;
         width: 100%;
         height: auto;
-        .imagenhorizontal{
+
+        .imagenhorizontal {
             width: 100%;
             height: auto;
         }
     }
+
     .carousel-inner {
         img {
             height: 150px;
